2015-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkangendai.el: New file, a successor of sb-gendai-net.el.
	* sb-gendai-net.el: Remove.

2015-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kyoko-np.el (shimbun-headers): Say "Checking new news...".

2015-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kyoko-np.el: New file.

2015-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yoshirin.el (shimbun-yoshirin-get-thumnail):
	No need to use shimbun-replace-in-string; always expose alt text.
	(shimbun-yoshirin-make-contents): Don't insert thumnail if the same one
	exists already in the article body.

2015-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yoshirin.el: New file.

2015-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-get-headers)
	(shimbun-sankei-get-headers-top-1): Protect against timestamp typo.

2015-02-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-article-contents):
	Respect shimbun-japanese-hankaku.

2015-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Remove ads.

2014-11-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Add `top' group.
	(shimbun-sankei-get-headers-top, shimbun-sankei-get-headers-top-1):
	New functions.
	(shimbun-get-headers): Call shimbun-sankei-get-headers-top.
	(shimbun-sankei-clear-contents): Update Date header.

2014-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Typo fix s/regino/region/;
	rearrange Japanese group names.
	(shimbun-sankei-category-name-alist): New variable.
	(shimbun-sankei-get-headers): Categorize author names in flash group.
	(shimbun-sankei-clear-contents): Work for old articles.

2014-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el: Work for the new Sankei-news.
	(shimbun-sankei): Don't rely on sb-rss.
	(shimbun-sankei-url, shimbun-sankei-top-level-domain)
	(shimbun-sankei-server-name, shimbun-sankei-group-table)